fixed alignment issue on bigger screens

--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -57,6 +57,6 @@
         height: 45vh;
         width: 18vw;
         top: 1em;
-        left: 18.5em;
+        left: inherit;
     }
 }
